--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -321,10 +321,22 @@ footer {
     gap: 15px;
   }
 
-  video {
-    width: 100%;
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
     max-width: 100%;
+    background: #000;
   }
+
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 }
 
 /* Tablet */
@@ -375,7 +387,20 @@ footer {
     gap: 25px;
   }
 
-  video {
-    width: 95%;
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    background: #000;
+  }
+
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
