center mobile nav

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -238,7 +238,8 @@ footer {
   nav {
     display: none;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
     position: absolute;
     top: 60px; /* just below header */
     left: 0;
